--- a/app.json
+++ b/app.json
@@ -1,10 +1,15 @@
-{
+                                            {
   "expo": {
     "name": "Pinareactnative",
     "slug": "Pinareactnative",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#d7f7bf"
+    },
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
