mengubah code di bagian import

--- a/app.json
+++ b/app.json
@@ -4,12 +4,7 @@
     "slug": "Pinareactnative",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#d7f7bf"
-    },
+    "icon": "./assets/images/masjid.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
